subprojects/pclc/test/errors/mismatch_call.pcl
// RUN: not pclc %s | tee %t.stdout

a = func () {
  print a;
  return 1;
}

func (void func (int)a): bar {
 a(1);
}

bar(foo);
